# asteroids

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  log4rs.yml  shell.nix
resources/: bindings_config.ron  display_config.ron  log4rs.yml
src/: asteroid.rs  asteroids.rs  components.rs  constants.rs  drawable.rs  inputs.rs  lib.rs  main.rs  math.rs  points.rs  resources.rs  ship.rs  systems.rs  traits.rs
src/components/: mod.rs  ship.rs  simple_bullet.rs  speed.rs
src/entities/: bullet.rs  mod.rs  rock.rs  ship.rs
src/objects/: asteroid.rs  bullet.rs  hit_box.rs  mod.rs  rock.rs  ship.rs  star.rs  universe.rs
src/state/: credits_screen.rs  game_over_screen.rs  game_screen.rs  mod.rs  start_screen.rs
src/systems/: game_over.rs  in_game.rs  menu.rs  mod.rs  ship.rs  speed.rs
texture/: ship_spritesheet.ron
web/: index.html
